# ipc-teal

./: Cargo.toml  mockup.rs  mockup_broadcast.rs
examples/: tester.rs
src/: broad_recv.rs  broadcast.rs  lib.rs  server.rs
