[package]
name = "ipc-teal"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9"
tokio-seqpacket = "0.8"
memfile = "0.3"
tokio = { version = "1", features = ["rt", "time"] }
tokio-util = "0.7"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"]}
color-eyre = "0.6.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "signal"] }